<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.incognitech.mortgagecalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:editable="true"
        android:ems="10"
        android:hint="@string/amt_borrowed_hint"
        android:id="@+id/amt_borrowed"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/intrst_rate_label"
        android:id="@+id/interest_rate_label"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/amt_borrowed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/interest_rate_value"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_above="@+id/interest_rate"
        android:layout_toRightOf="@+id/interest_rate_label"
        android:layout_toEndOf="@+id/interest_rate_label"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interest_rate"
        android:layout_below="@+id/interest_rate_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loan_term_label"
        android:id="@+id/loan_term_label"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/interest_rate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/loan_term_group"
        android:layout_below="@+id/interest_rate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term_7_label"
            android:id="@+id/loan_term_7"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term_15_label"
            android:id="@+id/loan_term_15"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term_30_label"
            android:id="@+id/loan_term_30"/>

    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_insurance_label"
        android:id="@+id/tax_insurance"
        android:layout_below="@+id/loan_term_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:checked="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/monthly_payment_label"
            android:id="@+id/monthly_payment_label"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tax_insurance"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/monthly_payment"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/monthly_payment_label"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
